--- a/crates/kit/Cargo.toml
+++ b/crates/kit/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1", features = ["full"] }
 xshell = { workspace = true }
 rand = { workspace = true }
 cfg-if = { workspace = true }
+indoc = "2.0.6"
