--- a/crates/kit/Cargo.toml
+++ b/crates/kit/Cargo.toml
@@ -6,10 +6,12 @@ publish = false
 
 [dependencies]
 cap-std-ext = { version = "4" }
+chrono = { version = "0.4", features = ["serde"] }
 color-eyre = { workspace = true }
 clap = { version = "4.4", features = ["derive"] }
 fn-error-context = { version = "0.2" }
 bootc-mount = { git = "https://github.com/bootc-dev/bootc", rev = "578063b24ca5b39498a70cbf91b2f0437916a29c" }
+bootc-utils = { git = "https://github.com/bootc-dev/bootc", rev = "578063b24ca5b39498a70cbf91b2f0437916a29c" }
 thiserror = "1.0"
 rustix = { "version" = "1", features = ["thread", "net", "fs", "pipe", "system", "process", "mount"] }
 serde = "1.0.199"
@@ -18,6 +20,7 @@ tokio = { version = "1", features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-error = { workspace = true }
+shlex = "1"
 xshell = { workspace = true }
 rand = { workspace = true }
 cfg-if = { workspace = true }
